--- a/styles/style.css
+++ b/styles/style.css
@@ -27,24 +27,28 @@ header {
   background-size: 100%;
   background-position: 25% 90%;
   color: #fff;
+  position: relative;
+  padding: 5rem;
 }
 
 main {
   grid-area: main;
   background-color: rgb(25, 25, 25);
-
   color: #fff;
 }
 
 footer {
   grid-area: footer;
-  /* background-color: darkgray; */
+  background-color: rgb(25, 25, 25);
 }
 
-.particles{
-    position: absolute;
-    width: 100%;
-    height: 10rem;
+.particles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .section {
@@ -54,22 +58,66 @@ footer {
   /* padding-top: 5rem;
   padding-bottom: 5rem; */
 }
+.nav {
+  position: relative;
+  z-index: 10;
+}
 .nav-link {
+  position: relative;
   text-decoration: none;
   font-weight: lighter;
   text-align: center;
   /* color: rgba(0, 0, 0, 0.5); */
   color: #fff;
+  cursor: pointer;
 }
 .nav-link:not(:first-child) {
-  padding-left: 0.5rem;
+  margin-left: 0.5rem;
+}
+.nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 1.5rem;
+  width: 0%;
+  height: 2px;
+  background-color: #79db75;
+  transition: all 0.1s ease-in;
+}
+.nav-link:hover::after {
+  width: 100%;
+}
+
+.nav-social {
+}
+.nav-social a {
+  display: inline-block;
+}
+.nav-social__icon {
+  width: 2rem;
+  height: 2rem;
+  filter: grayscale(1);
+  background-size: 100%;
+}
+.nav-social__icon-soundcloud {
+  background-image: url("../src/soundcloud.png");
+}
+.nav-social__icon-twitter {
+  background-image: url("../src/twitter.png");
+}
+.nav-social__icon-ig {
+  background-image: url("../src/ig.png");
+}
+.nav-social__icon-in {
+  background-image: url("../src/in.png");
 }
 
 .header__wrapper {
+  position: relative;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   flex-direction: column;
-  align-items: baseline;
 }
 .header__title {
   display: flex;
@@ -87,6 +135,10 @@ footer {
   flex-wrap: wrap;
   align-items: center;
   word-wrap: break-word;
+  transition: filter 0.1s ease-in;
+}
+.title__name:hover {
+  filter: blur(1px);
 }
 .title__subtitle {
   font-size: 1em;
@@ -139,10 +191,19 @@ footer {
   font-size: 1.2em;
   text-align: left;
 }
-.btn--contact {
+.btn {
+  background: #191919;
+  border: 0.3rem solid #ddd;
+  text-decoration: none;
+  color: #ddd;
+  text-align: center;
   padding: 1rem;
-  display: block;
-  width: 7rem;
+  margin: 5rem 0;
+  transition: all 0.2s ease;
+}
+.btn:hover {
+  border-radius: 1rem;
+  opacity: 0.7;
 }
 
 .field {
@@ -176,6 +237,9 @@ footer {
 }
 
 @media (min-width: 52rem) {
+  .header__nav {
+    padding-top: 0;
+  }
   .header__wrapper {
     flex-direction: row;
   }
