--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,10 @@ footer {
   /* background-color: rgb(25, 25, 25); */
   background-color: black;
 }
-
+.wrapper{
+  height: 100%;
+  width: 100%;
+}
 .particles {
   position: absolute;
   width: 100%;
@@ -62,8 +65,12 @@ footer {
   padding-bottom: 5rem; */
 }
 .link {
-  color: #fff;
+  color: #79db75;
   text-decoration: none;
+  margin: 0;
+  font-weight: bold;
+  color:#79db75;
+  font-size: .9em;
 }
 .link:hover {
   text-decoration: underline;
@@ -229,10 +236,10 @@ footer {
   color:#79db75;
   font-size: .9em;
 }
-.experience__desc__subtitle--nourl{
+.link--nourl{
   color: #fff;
 }
-.experience__desc__subtitle--nourl:hover{
+.link--nourl:hover{
   text-decoration: none;
 }
 .experience__desc span{
