Add new examples

--- a/styles/style.css
+++ b/styles/style.css
@@ -61,22 +61,26 @@ footer {
   /* padding-top: 5rem;
   padding-bottom: 5rem; */
 }
+
 .link {
   color: #79db75;
   text-decoration: none;
   margin: 0;
   font-weight: bold;
-  color:#79db75;
+  color: #79db75;
   font-size: .9em;
 }
+
 .link:hover {
   text-decoration: underline;
 }
+
 .nav {
   position: relative;
   z-index: 9;
   font-size: 0.8em;
 }
+
 .nav-link {
   position: relative;
   text-decoration: none;
@@ -86,9 +90,11 @@ footer {
   color: #fff;
   cursor: pointer;
 }
+
 .nav-link:not(:first-child) {
   margin-left: 0.5rem;
 }
+
 .nav-link::after {
   content: "";
   position: absolute;
@@ -99,6 +105,7 @@ footer {
   background-color: #79db75;
   transition: all 0.1s ease-in;
 }
+
 .nav-link:hover::after {
   width: 100%;
 }
@@ -107,31 +114,39 @@ footer {
   display: flex;
   align-items: center;
 }
+
 .nav-social a {
   display: inline-block;
 }
+
 .nav-social-link {
   position: relative;
   transition: all 0.2s ease-in;
 }
+
 .nav-social-link:not(:first-child) {
   margin-left: 1rem;
 }
+
 .nav-social__icon {
   width: 2rem;
   height: 2rem;
   filter: grayscale(1);
   background-size: 100%;
 }
+
 .nav-social__icon-soundcloud {
   background-image: url("../src/soundcloud.png");
 }
+
 .nav-social__icon-twitter {
   background-image: url("../src/twitter.png");
 }
+
 .nav-social__icon-ig {
   background-image: url("../src/ig.png");
 }
+
 .nav-social__icon-in {
   background-image: url("../src/in.png");
 }
@@ -148,12 +163,14 @@ footer {
   align-items: flex-start;
   flex-direction: column;
 }
+
 .header__title {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   text-align: left;
 }
+
 .title__name {
   font-family: "Major Mono Display";
   font-size: 2em;
@@ -166,9 +183,11 @@ footer {
   word-wrap: break-word;
   transition: filter 0.1s ease-in;
 }
+
 .title__name:hover {
   filter: blur(1px);
 }
+
 .title__subtitle {
   font-size: 1em;
   margin: 0;
@@ -177,10 +196,12 @@ footer {
   color: #79db75;
   font-weight: lighter;
 }
+
 .title__icon {
   font-size: 0.5em;
   padding: 0 0.5rem;
 }
+
 .header__nav {
   padding-top: 2rem;
 }
@@ -191,18 +212,29 @@ footer {
   font-size: 2em;
   font-weight: lighter;
 }
+.section__subtitle{
+  color: #79db75;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: lighter;
+
+}
+
 .desc {
   margin: 1rem 0;
 }
+
 .cover-letter__article {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
 .cover-letter__desc {
   text-align: left;
   margin: 0;
 }
+
 .cover-letter__photo {
   width: 100%;
   height: 20rem;
@@ -218,34 +250,65 @@ footer {
   flex-wrap: wrap;
   margin: 2.5rem 0;
 }
+
 .experience__date {
   width: 100%
 }
+
 .experience__desc {
   width: 100%
 }
-.experience__desc__title{
+
+.experience__desc__title {
   margin: 0;
 }
-.experience__desc__subtitle{
+
+.experience__desc__subtitle {
   margin: 0;
   font-weight: bold;
-  color:#79db75;
+  color: #79db75;
   font-size: .9em;
 }
-.link--nourl{
+
+.examples__wrapper {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
+.examples__wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.examples__wrapper--game{
+  padding-bottom: 0;
+  height: 177px;
+}
+.examples__wrapper--game .widget_container{
+  padding-bottom: 0;
+  height: 360px;
+}
+
+.link--nourl {
   color: #fff;
 }
-.link--nourl:hover{
+
+.link--nourl:hover {
   text-decoration: none;
 }
-.experience__desc span{
+
+.experience__desc span {
   display: block;
 }
 
 .contact__form {
   width: 100%;
 }
+
 .btn {
   display: inline-block;
   background: #191919;
@@ -258,10 +321,12 @@ footer {
   transition: all 0.2s ease;
   cursor: pointer;
 }
+
 .btn:hover {
   border-radius: 1rem;
   opacity: 0.7;
 }
+
 .field {
   display: block;
   margin: 1rem 0;
@@ -281,24 +346,32 @@ footer {
   -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
+
 .field--textarea {
   height: auto;
+  margin-bottom: 0;
 }
+
 .field:focus {
   border-color: #79db75;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 4px #79db75;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 4px #79db75;
 }
+
 .fields-requirements {
-  margin: 0.3rem 0;
+  margin-top: 0;
+  font-style: italic;
+  font-size: .9rem;
 }
+
 .footer__name {
   color: rgb(50, 50, 50);
   width: 75%;
   margin: 0;
   margin-bottom: 1rem;
 }
+
 .footer__wrapper {
   display: flex;
   padding: 2rem;
@@ -310,29 +383,37 @@ footer {
   .nav {
     font-size: 1em;
   }
+
   .header__nav {
     padding-top: 0;
   }
+
   .header__wrapper {
     flex-direction: row;
   }
+
   .header__title {
     margin-bottom: 0;
   }
+
   .cover-letter__article {
     flex-wrap: nowrap;
   }
+
   .cover-letter__desc {
     width: 45%;
   }
+
   .cover-letter__photo {
     width: 50%;
     height: 20rem;
     margin: 0;
   }
+
   .experience__date {
     width: 25%;
   }
+
   .experience__desc {
     width: 75%;
   }
@@ -340,10 +421,12 @@ footer {
   .contact__form {
     width: 50%;
   }
+
   .contact__info {
     font-size: 2em;
     text-align: left;
   }
+
   /* footer {
     position: fixed;
     bottom: 0;
@@ -353,6 +436,7 @@ footer {
   .footer__name {
     margin: 0;
   }
+
   /* footer{
     position: fixed;
     width: 100%;
